data/derived/comb/progs/unify/prog2705.ml.out
Characters 37-43:
  build(random,5);;
        ^^^^^^
Error: This expression has type int * int -> int
       but an expression was expected of type int -> int -> int
       Type int * int is not compatible with type int 
